--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
             <div class="auth-body">
                 <div id="login-form">
-                    <div class="form-floating mb-3"><input type="text" class="form-control" id="loginEmail" placeholder="Email"><label>Email / Phone</label></div>
+                    <div class="form-floating mb-3"><input type="text" class="form-control" id="loginEmail" placeholder="Email"><label>Gmail Address</label></div>
                     <div class="form-floating mb-4"><input type="password" class="form-control" id="loginPass" placeholder="Password"><label>Password</label></div>
                     <button class="btn btn-main py-3 fw-bold" onclick="window.handleLogin()">Login</button>
                     <p class="text-center small mt-4 mb-0">একাউন্ট নেই? <a href="#" onclick="toggleAuth('reg')" class="fw-bold" style="color:var(--primary-color)">Register করুন</a></p>
@@ -210,7 +210,7 @@
 
                 <div id="reg-form" style="display: none;">
                     <div class="form-floating mb-3"><input type="text" class="form-control" id="regName" placeholder="Name"><label>Full Name</label></div>
-                    <div class="form-floating mb-3"><input type="text" class="form-control" id="regEmail" placeholder="Email"><label>Email / Phone</label></div>
+                    <div class="form-floating mb-3"><input type="text" class="form-control" id="regEmail" placeholder="Email"><label>Gmail Address</label></div>
                     <div class="form-floating mb-3"><input type="password" class="form-control" id="regPass" placeholder="Pass"><label>Password</label></div>
                     <div class="form-floating mb-4"><input type="password" class="form-control" id="regConfirmPass" placeholder="Confirm"><label>Confirm Password</label></div>
                     <button class="btn btn-main py-3 fw-bold" onclick="window.handleRegister()">Register / Sign Up</button>
