--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
           document.getElementById('rateNew').innerText = `New Gmail : ${nR} টাকা`;
       }
       document.getElementById('rateOld').innerText = `Old Gmail : ${oR} টাকা`;
-      document.getElementById('dollarType').innerHTML = `<option value="new">New Gmail (Level Rate)</option><option value="${oR}">Old Gmail (${oR} Tk)</option>`;
+      document.getElementById('dollarType').innerHTML = `<option value="new">New Gmail (Level Rate)</option><option value="${oR}">Old Gmail (Level Rate )</option>`;
       
       window.baseOldRate = oR;
       
